--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,11 @@
 <html>
   <head><title><%= title %></title></head>
   <body>
-    welcome <%= user%>;
+    <h1>welcome <%= user%></h1>
+    <div>
+     <img src="<%= logo %>" style='width:20%' alt="Pizza">
+	<p><a href="<%= link %>" class="btn btn-primary" role="button">Yelp Link</a></p>
+    </div>
   </body>
 </html>
+
