--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,11 @@
 <html>
   <head><title><%= title %></title></head>
   <body>
-    <h1>welcome <%= user%></h1>
+    <h1><%= user%></h1>
     <div>
-     <img src="<%= logo %>" style='width:20%' alt="Pizza">
-	<p><a href="<%= link %>" class="btn btn-primary" role="button">Yelp Link</a></p>
+    <h1><%= restaurantName%></h1>
+     <img src="<%= restaurantLogo %>" style='width:20%' alt="Pizza">
+	<p><a href="<%= restaurantLink %>" class="btn btn-primary" role="button">Yelp Link</a></p>
     </div>
   </body>
 </html>
