testing payload.members now working on sending to multiple recipients

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,12 +2,12 @@
 <html>
   <head><title><%= title %></title></head>
   <body>
-    <h1><%= user%></h1>
     <div>
     <h1><%= restaurantName%></h1>
      <img src="<%= restaurantLogo %>" style='width:20%' alt="Pizza">
 	<p><a href="<%= restaurantLink %>" class="btn btn-primary" role="button">Yelp Link</a></p>
     </div>
+    <h2>Dear: <%= user%></h2>
   </body>
 </html>
 
