add team for render

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
 	<p><a href="<%= restaurantLink %>" class="btn btn-primary" role="button">Yelp Link</a></p>
     </div>
     <h2>Dear: <%= user%></h2>
+    <h3>Team: <%= team%></h3>
   </body>
 </html>
 
