implment the get feedback url into rating

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,18 +63,14 @@
      <img class='restaurantImageStyle' src="<%= restaurantLogo %>" alt="Pizza">
 	<p><a href="<%= restaurantLink %>" class="btn btn-primary" role="button">Yelp Link</a></p>
     </div>
-    <form method='POST' action='/'>
     <div style='text-align: center; margin: 30px;'>
-    	<span style='font-size: 16px'>
-		<a href='https://www.google.com'>
+		<a href='https://www.getfeedback.com/r/WlMdAaBb?gf_q[5246884]=10'>
 			<img src='https://help.getfeedback.com/customer/portal/attachments/306661' width='60'>
 		</a>
-		<a href='https://www.google.com'>
+		<a href='https://www.getfeedback.com/r/WlMdAaBb?gf_q[5246884]=1'>
 			<img src='https://help.getfeedback.com/customer/portal/attachments/306657' width='60'>
 		</a>
-		</span>
     </div>
-    </form>
    </div>
   </body>
 </html>
