hover effect on icon

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,6 +45,11 @@
   	font-family: arial;
   	background: #eee;
   }
+ 
+  .icon:hover {
+  	background-color: yellow;
+  	width:100px;
+  }
   
   </style>
   </head>
@@ -64,10 +69,10 @@
 	<p><a href="<%= restaurantLink %>" class="btn btn-primary" role="button">Yelp Link</a></p>
     </div>
     <div style='text-align: center; margin: 30px;'>
-		<a href='https://www.getfeedback.com/r/WlMdAaBb?gf_q[5246884]=10'>
+		<a href='https://www.getfeedback.com/r/WlMdAaBb?gf_q[5246884]=10' class='icon'>
 			<img src='https://help.getfeedback.com/customer/portal/attachments/306661' width='60'>
 		</a>
-		<a href='https://www.getfeedback.com/r/WlMdAaBb?gf_q[5246884]=1'>
+		<a href='https://www.getfeedback.com/r/WlMdAaBb?gf_q[5246884]=1' class='icon'>
 			<img src='https://help.getfeedback.com/customer/portal/attachments/306657' width='60'>
 		</a>
     </div>
