--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,7 @@
 
   .restaurantImageStyle {
 	width: 40%;
+	margin: 0 auto;
   }
 
   .feedbackFont {
@@ -55,18 +56,17 @@
   </head>
   <body>
   <div class='wrapper'>
-    <h1 class='feedbackFont'>We Love Feelback!</h1>
+    <h1 class='feedbackFont'>We Love Feedback!</h1>
     <div class='teamImageWrapper'> 
     	<img class='teamImage' src="<%= backgroundImage%>" alt="background">	
     </div>
-	<h2>Dear: <%= user%>,</h2>
-    <p>Remember last friday that the whole company went to <span class='restaurantFont'><%= restaurantName%></span> I hope you like it! Please vote yes or no below so we can see if we should go back again!<br>Thanks <%= user%>.</p>
+	<h2>Dear: <%= user%></h2>
+    <p>Remember last friday that the whole company went to <a href="<%= restaurantLink %>" class='restaurantFont'><%= restaurantName%></a> I hope you will like it! Please vote yes or no below so we can see if we should go back again!<br>Thanks <%= user%>.</p>
 	<div>
     <h3>Thank you always for making the <span class='teamFont'><%= team%></span> team great!</h3>
     </div>
     <div>
      <img class='restaurantImageStyle' src="<%= restaurantLogo %>" alt="Pizza">
-	<p><a href="<%= restaurantLink %>" class="btn btn-primary" role="button">Yelp Link</a></p>
     </div>
     <div style='text-align: center; margin: 30px;'>
 		<a href='https://www.getfeedback.com/r/WlMdAaBb?gf_q[5246884]=10' class='icon'>
