--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,10 +29,10 @@
   .restaurantFont {
   	color: Red;
   }
-
+  
   .restaurantImageStyle {
-	width: 40%;
-	margin: 0 auto;
+	 width: 40%;
+	 margin: 0 auto;
   }
 
   .feedbackFont {
@@ -69,11 +69,11 @@
      <img class='restaurantImageStyle' src="<%= restaurantLogo %>" alt="Pizza">
     </div>
     <div style='text-align: center; margin: 30px;'>
-		<a href='https://www.getfeedback.com/r/WlMdAaBb?gf_q[5246884]=10' class='icon'>
-			<img src='https://help.getfeedback.com/customer/portal/attachments/306661' width='60'>
-		</a>
-		<a href='https://www.getfeedback.com/r/WlMdAaBb?gf_q[5246884]=1' class='icon'>
-			<img src='https://help.getfeedback.com/customer/portal/attachments/306657' width='60'>
+  		<a href="http://localhost:3000/voteUserData?pizzaScore=10&member=<%= user%>" class='icon'>
+  			<img src='https://help.getfeedback.com/customer/portal/attachments/306661' width='60'>
+  		</a>
+  		<a href='http://localhost:3000/voteUserData?pizzaScore=1&member=<%= user%>' class='icon'>
+  			<img src='https://help.getfeedback.com/customer/portal/attachments/306657' width='60'>
 		</a>
     </div>
    </div>
